# weird_salads

./: .cruft.json  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.rst  alembic.ini  pyproject.toml  tox.ini
.github/workflows/: ci.yml
data/: ingredients.csv  locations.csv  menus.csv  modifiers.csv  recipes.csv  staff.csv
database/: README.rst
database/migrations/: README  env.py
database/migrations/versions/: 357a74ba46e5_add_tables.py  d5be4204230b_initial_order_table.py
docker/: Dockerfile  README.rst  docker-compose.yml
docs/: conf.py  index.rst
licenses/: LICENSE.rst
streamlit_app/: Dockerfile  app.py  requirements.txt
streamlit_app/pages/: create_stock.py  ingredients.py  menu.py  report_order.py  report_stock.py
weird_salads/: README.rst  __init__.py  example_mod.py  version.py
weird_salads/api/: app.py  schemas.py
weird_salads/inventory/inventory_service/: exceptions.py  inventory.py  inventory_service.py
weird_salads/inventory/repository/: inventory_repository.py  models.py
weird_salads/orders/orders_service/: orders.py  orders_service.py
weird_salads/orders/repository/: models.py  orders_repository.py
weird_salads/tests/: test_example.py
weird_salads/utils/: sqlalchemy_base.py  unit_of_work.py  utils.py
weird_salads/utils/database/: README.rst  clear_db.py  seed_db.py
